try to fix overflow on mobile version

--- a/source/assets/stylesheets/basics/_body.scss
+++ b/source/assets/stylesheets/basics/_body.scss
@@ -7,7 +7,7 @@ body {
   position:                    relative;
   height:                      100%;
   overflow-y:                  auto;
-  overflow-x:                  hidden;
+  overflow-x:                  hidden!important;
 
   -webkit-overflow-scrolling:  touch;
   -webkit-font-smoothing:      antialiased;
